src/uni/mlo450.jj
options
{
  JDK_VERSION = "1.5";
  static = false;
}

PARSER_BEGIN(UniParser)

package uni;

public class UniParser
{
}

PARSER_END(UniParser)

SKIP :
{
  " "
| "\r"
| "\t"
| "\n"
}

TOKEN : 
{
  < UNIVERSITYNAME : "UNIVERSITY " < STRING > " " < LEFTCURLY > >

| < WEBSITE : "WEBSITE " "\"" < URL > "\"" >
| < #URL : "http" ("s")? ":" "//" (["a"-"z", "A"-"Z", ".", "/", "_"])+ >

| < EST : "EST "< YEAR > >
| < #YEAR : ["0"-"9"] ["0"-"9"] ["0"-"9"] ["0"-"9"] >

| < GPS : "GPS " < COORDINATES > >
| < #COORDINATES : < LONGITUDE > ", " < LATITUDE > >
| < #LONGITUDE : < LONGDEGREE > " deg " < MINUTES > " " < SECONDS > " " ["E", "W"] >
| < #LATITUDE : < LATDEGREE > " deg " < MINUTES > " " < SECONDS > " " ["N", "S"] >
| < #LONGDEGREE : (["0"-"9"])? (["0"-"9"])? ["0"-"9"] >
| < #LATDEGREE : (["0"-"9"])? ["0"-"9"] >
| < #MINUTES : (["0"-"9"])? ["0"-"9"] >
| < #SECONDS : (["0"-"9"])? ["0"-"9"] ("." (["0"-"9"])? (["0"-"9"])? (["0"-"9"])? ["0"-"9"] )? >

| < FACULTYNAME : "FACULTY " < STRING > " " < LEFTCURLY > >

| < STUDENTS: "STUDENTS " < NUMSTUDENTS > >
| < #NUMSTUDENTS: (["0"-"9"])+ >

| < STAFF: "STAFF " < NUMSTAFF > >
| < #NUMSTAFF: (["0"-"9"])+ >

| < CODE : "CODE " < STRING > " " < LEFTCURLY >  >

| < COURSEENTRY : < COURSEID > " " < STRING > " " < COURSEPOINTS > >
| < #COURSEID : ["0"-"9"] ["0"-"9"] ["0"-"9"] (["A", "B"])? >
| < #COURSEPOINTS : (["0"-"9"])? ["0"-"9"] "p" >

| < LEFTCURLY : "{" >
| < RIGHTCURLY : "}" >
| < #STRING : "\"" (["a"-"z", "A"-"Z", " "])+ "\"" >
}

void University() : {}
{
  < UNIVERSITYNAME >
  UniversityData()
}

void UniversityData() : {}
{
 < EST >
 < WEBSITE >
 < GPS >}

void Faculty() : {}{
 < FACULTYNAME >


 < RIGHTCURLY >
}

void Code() : {}{
 < CODE >
 (< COURSEENTRY >)+
 < RIGHTCURLY >}
